# hatchbed_common

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
docs/: localization_utils.md  logging_utils.md  odometry_utils.md  param_utils.md  pointcloud_utils.md  profiling_utils.md  transforms_utils.md
example/: example_node.cpp
include/hatchbed_common/: logging.h  param_handler.h  parameter.h  ros_names.h  simple_profiler.h  tf2_ros_compat.h
include/hatchbed_common/localization/: covariance_util.h  pose_buffer.h
include/hatchbed_common/logging/: formatting.h  functions.h  macros.h  message_formatting.h
include/hatchbed_common/pointcloud/: convex_hull_2d.hpp  convex_prism.hpp  point_cloud2_util.hpp
include/hatchbed_common/transforms/: covariance_util.h  pose_buffer.h  transform_util.h
include/param_util/: param_handler.h  parameter.h
src/localization/: covariance_util.cpp  pose_buffer.cpp
src/localization/components/: imu_to_twist.cpp  odom_tf_broadcast.cpp  odom_to_twist.cpp  reframe_odom.cpp  tf_reroot.cpp  twist_mux.cpp
src/odometry/components/: imu_to_twist.cpp  odom_tf_broadcast.cpp  odom_to_twist.cpp  velocity_sensor_mux.cpp
src/pointcloud/: convex_hull_2d.cpp  convex_prism.cpp  point_cloud2_util.cpp
src/pointcloud/components/: crop_box.cpp  crop_radius.cpp  merge_point_clouds.cpp
src/transforms/: covariance_util.cpp  pose_buffer.cpp
src/transforms/components/: reframe_odom.cpp  tf_reroot.cpp
test/: test_param_handler.cpp  test_ros_names.cpp
test/localization/: test_covariance_util.cpp  test_pose_buffer.cpp
test/logging/: test_formatting.cpp  test_logging.cpp  test_message_formatting.cpp
test/pointcloud/: test_convex_hull_2d.cpp  test_convex_prism.cpp  test_point_cloud2_util.cpp
test/transforms/: test_covariance_util.cpp  test_pose_buffer.cpp  test_transform_util.cpp
