<?xml version="1.0"?>
<package format="3">
  <name>hatchbed_common</name>
  <version>0.1.0</version>
  <description>Common Hatchbed C++ utility code for ROS, such registering and handling updates to ros parameters.</description>

  <maintainer email="marcalban@hatchbed.com">Marc Alban</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>

</package>
