<?xml version="1.0"?>
<package format="3">
  <name>hatchbed_common</name>
  <version>0.1.1</version>
  <description>Common Hatchbed C++ utility code for ROS, such registering and handling updates to ros parameters.</description>

  <maintainer email="marcalban@hatchbed.com">Marc Alban</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
